# prng-bench

./: .gitignore  CMakeLists.txt  README.md
include/benchmark/: benchmark.hpp  benchmark_runner.hpp
include/cli/: cli_defaults.hpp  cli_parser.hpp
include/prng/: lcg.hpp  mt19937.hpp  pcg32.hpp  prng_base.hpp  split_mix64.hpp  thread_safe_wrap.hpp  xor_shift.hpp
src/: main.cpp
src/benchmark/: benchmark.cpp  benchmark_runner.cpp
src/cli/: cli_parser.cpp
src/prng/: lcg.cpp  mt19937.cpp  pcg32.cpp  split_mix64.cpp  xor_shift.cpp
